
Key to developers
-----------------

- DP   Dave Page
- AP   Andreas Pflug
- JMP  Jean-Michel Poure
- HS   Hiroshi Saito
- AHP  Adam H. Pendleton
- MP   Marc Persuy
- DAP  Darko Prenosil
- FGP  Florian G. Pflug
- MH   Magnus Hagander

Changes
-------

Date       Dev Ver    Change details
---------- --- -----  --------------
2006-08-30 DP  1.6.0  Favour a primary key over an OID column when updating 
                      data in the edit grid to benefit from the index, per
                      Vivek Khera.
2006-08-30 DP  1.6.0  Require the use of wxWidgets 2.7 or above (needed for the
                      wxAUI classes.
2006-08-30 DP  1.6.0  Use the wxAUI library to provide dockable window elements
                      on the main window, query tool and edit grid, giving
                      us a much more modern look and feel.
2006-08-30 MH  1.6.0  Allow for -q to open query tool without opening
                      main window. Add -qc switch to open query tool and
                      autoconnect using a connection string.
2006-08-30 MH  1.6.0  Disable splash-screen completely in debug builds.
2006-08-29 MH  1.6.0  Add a New Window menu/toolbar to the query tool.
2006-08-15 DP  1.6.0  Set focus on the filter textbox when opening the View
                      data filter options [Guillaume Lelarge]
2006-08-15 DP  1.6.0  Auto-select the next item when removing columns from 
                      the View Data sort options dialog [Guillaume Lelarge]
2006-07-21 DP  1.4.4  Fix custom vacuum settings editting, per Benjamin 
                      Krajmalnik
2006-07-18 DP  1.4.3  Display job steps and schedules properly in the Job
                      dialogue, per Eric Shuman.
2006-07-17 DP  1.4.3  Display interval precision properly, per Walter Haslbeck
2006-07-04 DP  1.6.0  Make elements of the main windows dockable for 
                      maximum configurability.
2006-07-04 DP  1.6.0  Add 'scratch pads' to the Edit Grid and Query Tool