@@ -35,7 +35,9 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
-2006-08-30 DP  1.6.0  Favour a primary key over an OID column when updating 
+2006-08-30 DP  1.6.0  Fix maintenance dialogue for Primary Keys and Unique
+                      constraints per Alexander Kirpa
+2006-08-30 DP  1.6.0  Favour a primary key over an OID column when updating
                       data in the edit grid to benefit from the index, per
                       Vivek Khera.
 2006-08-30 DP  1.6.0  Require the use of wxWidgets 2.7 or above (needed for the
